se modifico datos en el eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,7 @@
     "filterBy":true,
     "computeAvgSpawns":true,
     "computeCountTypePokemons" :true,
+    "Set" :true,
     "google": false
   }
 }
