--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,7 +1,8 @@
 {
   "env": {
     "node": true,
-    "mocha": true
+    "mocha": true,
+    "jest": true
   },
   "globals": {
     "assert": false
